# AttentionSmithy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml  version-check.yml
examples/machine-translation/: README.md  data_download.py  data_import.py  main.py  model_import.py
src/attention_smithy/: test_functions.py  utils.py
src/attention_smithy/attention/: BigBirdAttentionMethod.py  LinformerAttentionMethod.py  LongformerAttentionMethod.py  StandardAttentionMethod.py  __init__.py
src/attention_smithy/components/: Decoder.py  DecoderLayer.py  Encoder.py  EncoderLayer.py  FeedForwardNetwork.py  MultiheadAttention.py  SublayerUnit.py  __init__.py  sublayer_helpers.py
src/attention_smithy/generators/: BeamGenerator.py  BeamGeneratorAcrossBatch.py  GeneratorContext.py  GeneratorModuleAbstractClass.py  GeneratorStrategy.py  GreedyGenerator.py  __init__.py
src/attention_smithy/numeric_embeddings/: ALiBiEmbedding.py  LearnedEmbedding.py  NumericEmbeddingFacade.py  NumericEmbeddingManager.py  README.md  RotaryEmbedding.py  SinusoidalEmbedding.py  __init__.py  abstract_embedding_strategies.py
src/attention_smithy/tests/: test_multi_gpu_training.py
tests/unit/: test_utils.py
tests/unit/attention/: test_BigBirdAttention.py  test_BigBirdAttentionMethod.py  test_StandardAttentionMethod.py
tests/unit/components/: test_Decoder.py  test_DecoderLayer.py  test_Encoder.py  test_EncoderLayer.py  test_MultiheadAttention.py
tests/unit/generators/: test_BeamGenerator.py  test_BeamGeneratorAcrossBatch.py  test_GreedyGenerator.py
(+36 files in other folders)
